# tabby-zj

./: Cargo.toml  LICENSE  README.md  config.yaml  dev.kdl  install.sh  tabby-zj.kdl
.github/workflows/: ci.yml
scripts/: tabby-zj-hook.sh
src/: click.rs  color_picker.rs  colors.rs  config.rs  grouping.rs  indicators.rs  input.rs  lib.rs  menus.rs  persistence.rs  picker.rs  render.rs  state.rs  workers.rs
src/pet/: animation.rs  mod.rs  render.rs  state.rs
src/widgets/: clock.rs  git.rs  mod.rs  quota.rs  stats.rs
