[package]
name = "tabby-zj"
version = "0.1.0"
edition = "2021"
description = "Zellij sidebar plugin — grouped tabs, context menus, widgets, indicators"

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile = "0.44.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = "s"
lto = true
