[package]
name = "tabby-zj"
version = "0.1.0"
edition = "2021"
description = "Zellij sidebar plugin — grouped tabs, context menus, widgets, indicators"
license = "MIT"
repository = "https://github.com/brendandebeasi/tabby-zj"
homepage = "https://github.com/brendandebeasi/tabby-zj"
keywords = ["zellij", "plugin", "terminal", "sidebar", "wasm"]
categories = ["command-line-utilities"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zellij-tile = "0.44.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.10"
emojis = "0.8"
unicode-width = "0.2"
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = "s"
lto = true
